@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.650 2005-03-08 17:06:36 castaglia Exp $
+$Id: NEWS,v 1.651 2005-03-16 16:16:43 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -122,6 +122,7 @@ CVS
 - Bug 2515 - mod_quotatab should enforce hard limits at the filesystem level.
 - Bug 2567 - Segmentation fault with 64-bit binary due to structure layout
   difference.
+- Bug 2551 - Recursive LIST with symlinked directories gives duplicate results.
 
 1.2.10 - Released 04-Sep-2004
 --------------------------------
